Fix sidebar item horizontal alignment

--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -89,11 +89,14 @@
 		font-weight: 400;
 		color: @colorSidebarText;
 
+		.icon {
+			margin-left: 8px;
+		}
+
 		img.content-mask {
 			background-color: @colorSidebarText;
 			margin-top: -1px;
 			margin-bottom: 1px;
-			margin-left: 16px;
 		}
 
 		&:hover {
